# zephyr-mcp

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  Taskfile.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: architecture.md
src/zephyr_mcp/: __init__.py  exceptions.py
src/zephyr_mcp/server/: __init__.py  context.py  dependencies.py  factory.py  squad_dependencies.py  squad_tools.py  tools.py
src/zephyr_mcp/squad/: __init__.py  client.py  config.py  cycles.py  executions.py  jwt_auth.py  pat_client.py  protocol.py
src/zephyr_mcp/utils/: __init__.py  decorators.py  env.py  logging.py  oauth.py  ssl.py  urls.py
src/zephyr_mcp/zephyr/: __init__.py  client.py  config.py  constants.py  testcases.py  testcycles.py  testexecutions.py
tests/: __init__.py  test_cli.py  test_client.py  test_config.py  test_constants.py  test_exceptions.py  test_format_result.py  test_server_context.py  test_server_dependencies.py  test_server_dependencies_http.py  test_server_factory.py  test_server_tools.py  test_server_tools_errors.py  test_squad_client.py  test_squad_config.py  test_squad_cycles.py  test_squad_dependencies.py  test_squad_executions.py  test_squad_fetcher.py  test_squad_jwt_auth.py  test_squad_pat_client.py  test_squad_tools.py  test_testcases.py  test_testcycles.py  test_testexecutions.py  test_utils_decorators.py  test_utils_env.py  test_utils_logging.py  test_utils_oauth.py  test_utils_ssl.py  test_utils_urls.py  test_zephyr_fetcher.py
