[project]
name = "zephyr-mcp"
version = "0.1.0"
description = "MCP server for Zephyr Scale test management - providing AI-powered access to test cases, test cycles, and test executions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "fastmcp>=2.13.0,<2.15.0",
    "mcp>=1.8.0,<2.0.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.6,<3.0",
    "keyring>=25.6.0",
    "starlette>=0.49.1",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.9.0",
]

[project.scripts]
zephyr-mcp = "zephyr_mcp:main"

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: mark test as requiring integration with real services",
]

[tool.ruff]
line-length = 150
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I", "N", "UP", "S", "C4", "ICN"]
ignore = []
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
